--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
     <header class="header">
         <div>Weather Dashboard</div>
     </header>
+    <!-- Referenced Youtube video for help with the single day weather box src:https://www.youtube.com/watch?v=GXrDEA3SIOQ&ab_channel=ShanjaiRaj -->
     <div class="oneDayForcastContainer">
+        <h1 class="name"> City</h1>
+        <p class="description">Weather Description</p>
+        <p class="temperature"> Temperature</p>
 
     </div>
+
     <div class="forecastContainer">5-day Forecast
         <div>
             <div class="day">Monday</div>
@@ -33,7 +38,8 @@
     </div>
     <div class="searchContainer">Search for a City:
         <div class="topnav">
-            <input type="text" placeholder="Search..">
+            <input type="text" class="searchBtn" placeholder="Enter City Here"> 
+            <button type="text" value="Submit" class="subButton">Search</button>
         </div>
         <div>
             <button type="button" class="btn btn-secondary">Austin</button>
